[gd_scene load_steps=13 format=3 uid="uid://dn2beid6sckyf"]

[ext_resource type="Script" path="res://Scripts/LevelDesign/level_2.gd" id="1_ndq6b"]
[ext_resource type="TileSet" uid="uid://tht3t5yl5phc" path="res://Scenes/Background/tiny_color_tile_set.tres" id="2_6uody"]
[ext_resource type="PackedScene" uid="uid://wul58knwniw4" path="res://Scenes/Menus/paused_button.tscn" id="3_6rbql"]
[ext_resource type="PackedScene" uid="uid://f3walnwhu4cw" path="res://Scenes/Menus/reset.tscn" id="4_4qplp"]
[ext_resource type="PackedScene" uid="uid://dvx7y5xyqrd0n" path="res://Scenes/Scenes/Levels/Puzzles/MeasuringZone.tscn" id="5_ypbsr"]
[ext_resource type="PackedScene" uid="uid://b7qhk6liuo5x2" path="res://Scenes/Scenes/Levels/Puzzles/gate.tscn" id="6_0uq0e"]
[ext_resource type="PackedScene" uid="uid://dheow2ymn7pi8" path="res://Scenes/Collectables/honeydew.tscn" id="7_hyhtb"]
[ext_resource type="Script" path="res://Scenes/Tools/Camera/CameraShake.gd" id="8_4r3tr"]
[ext_resource type="PackedScene" uid="uid://dr3yvmitwluwc" path="res://Scenes/Tools/tools.tscn" id="9_h24bs"]
[ext_resource type="PackedScene" uid="uid://brenpfo706mj7" path="res://Scenes/Scenes/Characters/Ants/ant.tscn" id="10_or68a"]
[ext_resource type="PackedScene" uid="uid://scvdcp587rcs" path="res://Scenes/Menus/pause_menu.tscn" id="11_hbkdr"]
[ext_resource type="PackedScene" uid="uid://pnac0deeoyod" path="res://Scenes/Scalable Objects/rock.tscn" id="12_g6fq1"]

[node name="Level4" type="Node2D" node_paths=PackedStringArray("gate", "marker")]
texture_filter = 1
script = ExtResource("1_ndq6b")
gate = NodePath("Puzzles/Gate")
current_scene = "res://Scenes/Scenes/Levels/level_4.tscn"
marker = NodePath("Tools/Marker2D2")
next_scene = "res://Scenes/Menus/thanks_card.tscn"

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-8, -13)
tile_set = ExtResource("2_6uody")
format = 2
layer_0/name = "void"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-720914, 65536, 0, -655378, 65536, 0, -589842, 65536, 0, -524306, 65536, 0, -458770, 65536, 0, -393234, 65536, 0, -327698, 65536, 0, -262162, 65536, 0, -196626, 65536, 0, -131090, 65536, 0, -65554, 65536, 0, -18, 65536, 0, 65518, 65536, 0, 131054, 65536, 0, 196590, 65536, 0, 262126, 65536, 0, 327662, 65536, 0, 393198, 65536, 0, 458734, 65536, 0, 524270, 65536, 0, 589806, 65536, 0, 655342, 65536, 0, 720878, 65536, 0, -720913, 65536, 0, -655377, 65536, 0, -589841, 65536, 0, -524305, 65536, 0, -458769, 65536, 0, -393233, 65536, 0, -327697, 65536, 0, -262161, 65536, 0, -196625, 65536, 0, -131089, 65536, 0, -65553, 65536, 0, -17, 65536, 0, 65519, 65536, 0, 131055, 65536, 0, 196591, 65536, 0, 262127, 65536, 0, 327663, 65536, 0, 393199, 65536, 0, 458735, 65536, 0, 524271, 65536, 0, 589807, 65536, 0, 655343, 65536, 0, 720879, 65536, 0, -720912, 65536, 0, -655376, 65536, 0, -589840, 65536, 0, -524304, 65536, 0, -458768, 65536, 0, -393232, 65536, 0, -327696, 65536, 0, -262160, 65536, 0, -196624, 65536, 0, -131088, 65536, 0, -65552, 65536, 0, -16, 65536, 0, 65520, 65536, 0, 131056, 65536, 0, 196592, 65536, 0, 262128, 65536, 0, 327664, 65536, 0, 393200, 65536, 0, 458736, 65536, 0, 524272, 65536, 0, 589808, 65536, 0, 655344, 65536, 0, 720880, 65536, 0, -720911, 65536, 0, -655375, 65536, 0, -589839, 65536, 0, -524303, 65536, 0, -458767, 65536, 0, -393231, 65536, 0, -327695, 65536, 0, -262159, 65536, 0, -196623, 65536, 0, -131087, 65536, 0, -65551, 65536, 0, -15, 65536, 0, 65521, 65536, 0, 131057, 65536, 0, 196593, 65536, 0, 262129, 65536, 0, 327665, 65536, 0, 393201, 65536, 0, 458737, 65536, 0, 524273, 65536, 0, 589809, 65536, 0, 655345, 65536, 0, 720881, 65536, 0, -720910, 65536, 0, -655374, 65536, 0, -589838, 65536, 0, -524302, 65536, 0, -458766, 65536, 0, -393230, 65536, 0, -327694, 65536, 0, -262158, 65536, 0, -196622, 65536, 0, -131086, 65536, 0, -65550, 65536, 0, -14, 65536, 0, 65522, 65536, 0, 131058, 65536, 0, 196594, 65536, 0, 262130, 65536, 0, 327666, 65536, 0, 393202, 65536, 0, 458738, 65536, 0, 524274, 65536, 0, 589810, 65536, 0, 655346, 65536, 0, 720882, 65536, 0, -720909, 65536, 0, -655373, 65536, 0, -589837, 65536, 0, -524301, 65536, 0, -458765, 65536, 0, -393229, 65536, 0, -327693, 65536, 0, -262157, 65536, 0, -196621, 65536, 0, -131085, 65536, 0, -65549, 65536, 0, -13, 65536, 0, 65523, 65536, 0, 131059, 65536, 0, 196595, 65536, 0, 262131, 65536, 0, 327667, 65536, 0, 393203, 65536, 0, 458739, 65536, 0, 524275, 65536, 0, 589811, 65536, 0, 655347, 65536, 0, 720883, 65536, 0, -720908, 65536, 0, -655372, 65536, 0, -589836, 65536, 0, -524300, 65536, 0, -458764, 65536, 0, -393228, 65536, 0, -327692, 65536, 0, -262156, 65536, 0, -196620, 65536, 0, -131084, 65536, 0, -65548, 65536, 0, -12, 65536, 0, 65524, 65536, 0, 131060, 65536, 0, 196596, 65536, 0, 262132, 65536, 0, 327668, 65536, 0, 393204, 65536, 0, 458740, 65536, 0, 524276, 65536, 0, 589812, 65536, 0, 655348, 65536, 0, 720884, 65536, 0, -720907, 65536, 0, -655371, 65536, 0, -589835, 65536, 0, -524299, 65536, 0, -458763, 65536, 0, -393227, 65536, 0, -327691, 65536, 0, -262155, 65536, 0, -196619, 65536, 0, -131083, 65536, 0, -65547, 65536, 0, -11, 65536, 0, 65525, 65536, 0, 131061, 65536, 0, 196597, 65536, 0, 262133, 65536, 0, 327669, 65536, 0, 393205, 65536, 0, 458741, 65536, 0, 524277, 65536, 0, 589813, 65536, 0, 655349, 65536, 0, 720885, 65536, 0, -720906, 65536, 0, -655370, 65536, 0, -589834, 65536, 0, -524298, 65536, 0, -458762, 65536, 0, -393226, 65536, 0, -327690, 65536, 0, 524278, 65536, 0, 589814, 65536, 0, 655350, 65536, 0, 720886, 65536, 0, -720905, 65536, 0, -655369, 65536, 0, -589833, 65536, 0, -524297, 65536, 0, -458761, 65536, 0, -393225, 65536, 0, -327689, 65536, 0, 524279, 65536, 0, 589815, 65536, 0, 655351, 65536, 0, 720887, 65536, 0, -720904, 65536, 0, -655368, 65536, 0, -589832, 65536, 0, -524296, 65536, 0, -458760, 65536, 0, -393224, 65536, 0, -327688, 65536, 0, 524280, 65536, 0, 589816, 65536, 0, 655352, 65536, 0, 720888, 65536, 0, -720903, 65536, 0, -655367, 65536, 0, -589831, 65536, 0, -524295, 65536, 0, -458759, 65536, 0, -393223, 65536, 0, -327687, 65536, 0, 524281, 65536, 0, 589817, 65536, 0, 655353, 65536, 0, 720889, 65536, 0, -720902, 65536, 0, -655366, 65536, 0, -589830, 65536, 0, -524294, 65536, 0, -458758, 65536, 0, -393222, 65536, 0, -327686, 65536, 0, 524282, 65536, 0, 589818, 65536, 0, 655354, 65536, 0, 720890, 65536, 0, -720901, 65536, 0, -655365, 65536, 0, -589829, 65536, 0, -524293, 65536, 0, -458757, 65536, 0, -393221, 65536, 0, -327685, 65536, 0, 524283, 65536, 0, 589819, 65536, 0, 655355, 65536, 0, 720891, 65536, 0, -720900, 65536, 0, -655364, 65536, 0, -589828, 65536, 0, -524292, 65536, 0, -458756, 65536, 0, -393220, 65536, 0, -327684, 65536, 0, 524284, 65536, 0, 589820, 65536, 0, 655356, 65536, 0, 720892, 65536, 0, -720899, 65536, 0, -655363, 65536, 0, -589827, 65536, 0, -524291, 65536, 0, -458755, 65536, 0, -393219, 65536, 0, -327683, 65536, 0, 524285, 65536, 0, 589821, 65536, 0, 655357, 65536, 0, 720893, 65536, 0, -720898, 65536, 0, -655362, 65536, 0, -589826, 65536, 0, -524290, 65536, 0, -458754, 65536, 0, -393218, 65536, 0, -327682, 65536, 0, 524286, 65536, 0, 589822, 65536, 0, 655358, 65536, 0, 720894, 65536, 0, -720897, 65536, 0, -655361, 65536, 0, -589825, 65536, 0, -524289, 65536, 0, -458753, 65536, 0, -393217, 65536, 0, -327681, 65536, 0, 524287, 65536, 0, 589823, 65536, 0, 655359, 65536, 0, 720895, 65536, 0, -786432, 65536, 0, -720896, 65536, 0, -655360, 65536, 0, -589824, 65536, 0, -524288, 65536, 0, -458752, 65536, 0, -393216, 65536, 0, 458752, 65536, 0, 524288, 65536, 0, 589824, 65536, 0, 655360, 65536, 0, -786431, 65536, 0, -720895, 65536, 0, -655359, 65536, 0, -589823, 65536, 0, -524287, 65536, 0, -458751, 65536, 0, -393215, 65536, 0, 458753, 65536, 0, 524289, 65536, 0, 589825, 65536, 0, 655361, 65536, 0, -786430, 65536, 0, -720894, 65536, 0, -655358, 65536, 0, -589822, 65536, 0, -524286, 65536, 0, -458750, 65536, 0, -393214, 65536, 0, 458754, 65536, 0, 524290, 65536, 0, 589826, 65536, 0, 655362, 65536, 0, -786429, 65536, 0, -720893, 65536, 0, -655357, 65536, 0, -589821, 65536, 0, -524285, 65536, 0, -458749, 65536, 0, -393213, 65536, 0, 458755, 65536, 0, 524291, 65536, 0, 589827, 65536, 0, 655363, 65536, 0, -786428, 65536, 0, -720892, 65536, 0, -655356, 65536, 0, -589820, 65536, 0, -524284, 65536, 0, -458748, 65536, 0, -393212, 65536, 0, 458756, 65536, 0, 524292, 65536, 0, 589828, 65536, 0, 655364, 65536, 0, -786427, 65536, 0, -720891, 65536, 0, -655355, 65536, 0, -589819, 65536, 0, -524283, 65536, 0, -458747, 65536, 0, -393211, 65536, 0, 458757, 65536, 0, 524293, 65536, 0, 589829, 65536, 0, 655365, 65536, 0, -786426, 65536, 0, -720890, 65536, 0, -655354, 65536, 0, -589818, 65536, 0, -524282, 65536, 0, -458746, 65536, 0, -393210, 65536, 0, 458758, 65536, 0, 524294, 65536, 0, 589830, 65536, 0, 655366, 65536, 0, -786425, 65536, 0, -720889, 65536, 0, -655353, 65536, 0, -589817, 65536, 0, -524281, 65536, 0, -458745, 65536, 0, -393209, 65536, 0, 458759, 65536, 0, 524295, 65536, 0, 589831, 65536, 0, 655367, 65536, 0, -786424, 65536, 0, -720888, 65536, 0, -655352, 65536, 0, -589816, 65536, 0, -524280, 65536, 0, -458744, 65536, 0, -393208, 65536, 0, 458760, 65536, 0, 524296, 65536, 0, 589832, 65536, 0, 655368, 65536, 0, -786423, 65536, 0, -720887, 65536, 0, -655351, 65536, 0, -589815, 65536, 0, -524279, 65536, 0, -458743, 65536, 0, -393207, 65536, 0, -327671, 65536, 0, -262135, 65536, 0, -196599, 65536, 0, -131063, 65536, 0, -65527, 65536, 0, 9, 65536, 0, 65545, 65536, 0, 131081, 65536, 0, 196617, 65536, 0, 262153, 65536, 0, 327689, 65536, 0, 393225, 65536, 0, 458761, 65536, 0, 524297, 65536, 0, 589833, 65536, 0, 655369, 65536, 0, -786422, 65536, 0, -720886, 65536, 0, -655350, 65536, 0, -589814, 65536, 0, -524278, 65536, 0, -458742, 65536, 0, -393206, 65536, 0, -327670, 65536, 0, -262134, 65536, 0, -196598, 65536, 0, -131062, 65536, 0, -65526, 65536, 0, 10, 65536, 0, 65546, 65536, 0, 131082, 65536, 0, 196618, 65536, 0, 262154, 65536, 0, 327690, 65536, 0, 393226, 65536, 0, 458762, 65536, 0, 524298, 65536, 0, 589834, 65536, 0, 655370, 65536, 0, -786421, 65536, 0, -720885, 65536, 0, -655349, 65536, 0, -589813, 65536, 0, -524277, 65536, 0, -458741, 65536, 0, -393205, 65536, 0, -327669, 65536, 0, -262133, 65536, 0, -196597, 65536, 0, -131061, 65536, 0, -65525, 65536, 0, 11, 65536, 0, 65547, 65536, 0, 131083, 65536, 0, 196619, 65536, 0, 262155, 65536, 0, 327691, 65536, 0, 393227, 65536, 0, 458763, 65536, 0, 524299, 65536, 0, 589835, 65536, 0, 655371, 65536, 0, -786420, 65536, 0, -720884, 65536, 0, -655348, 65536, 0, -589812, 65536, 0, -524276, 65536, 0, -458740, 65536, 0, -393204, 65536, 0, -327668, 65536, 0, -262132, 65536, 0, -196596, 65536, 0, -131060, 65536, 0, -65524, 65536, 0, 12, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 65536, 0, 458764, 65536, 0, 524300, 65536, 0, 589836, 65536, 0, 655372, 65536, 0, -786419, 65536, 0, -720883, 65536, 0, -655347, 65536, 0, -589811, 65536, 0, -524275, 65536, 0, -458739, 65536, 0, -393203, 65536, 0, -327667, 65536, 0, -262131, 65536, 0, -196595, 65536, 0, -131059, 65536, 0, -65523, 65536, 0, 13, 65536, 0, 65549, 65536, 0, 131085, 65536, 0, 196621, 65536, 0, 262157, 65536, 0, 327693, 65536, 0, 393229, 65536, 0, 458765, 65536, 0, 524301, 65536, 0, 589837, 65536, 0, 655373, 65536, 0, -786418, 65536, 0, -720882, 65536, 0, -655346, 65536, 0, -589810, 65536, 0, -524274, 65536, 0, -458738, 65536, 0, -393202, 65536, 0, -327666, 65536, 0, -262130, 65536, 0, -196594, 65536, 0, -131058, 65536, 0, -65522, 65536, 0, 14, 65536, 0, 65550, 65536, 0, 131086, 65536, 0, 196622, 65536, 0, 262158, 65536, 0, 327694, 65536, 0, 393230, 65536, 0, 458766, 65536, 0, 524302, 65536, 0, 589838, 65536, 0, 655374, 65536, 0, -786417, 65536, 0, -720881, 65536, 0, -655345, 65536, 0, -589809, 65536, 0, -524273, 65536, 0, -458737, 65536, 0, -393201, 65536, 0, -327665, 65536, 0, -262129, 65536, 0, -196593, 65536, 0, -131057, 65536, 0, -65521, 65536, 0, 15, 65536, 0, 65551, 65536, 0, 131087, 65536, 0, 196623, 65536, 0, 262159, 65536, 0, 327695, 65536, 0, 393231, 65536, 0, 458767, 65536, 0, 524303, 65536, 0, 589839, 65536, 0, 655375, 65536, 0, -786416, 65536, 0, -720880, 65536, 0, -655344, 65536, 0, -589808, 65536, 0, -524272, 65536, 0, -458736, 65536, 0, -393200, 65536, 0, -327664, 65536, 0, -262128, 65536, 0, -196592, 65536, 0, -131056, 65536, 0, -65520, 65536, 0, 16, 65536, 0, 65552, 65536, 0, 131088, 65536, 0, 196624, 65536, 0, 262160, 65536, 0, 327696, 65536, 0, 393232, 65536, 0, 458768, 65536, 0, 524304, 65536, 0, 589840, 65536, 0, 655376, 65536, 0, -786415, 65536, 0, -720879, 65536, 0, -655343, 65536, 0, -589807, 65536, 0, -524271, 65536, 0, -458735, 65536, 0, -393199, 65536, 0, -327663, 65536, 0, -262127, 65536, 0, -196591, 65536, 0, -131055, 65536, 0, -65519, 65536, 0, 17, 65536, 0, 65553, 65536, 0, 131089, 65536, 0, 196625, 65536, 0, 262161, 65536, 0, 327697, 65536, 0, 393233, 65536, 0, 458769, 65536, 0, 524305, 65536, 0, 589841, 65536, 0, 655377, 65536, 0)
layer_1/name = "ground"
layer_1/tile_data = PackedInt32Array(-196617, 65536, 0, -131081, 65536, 0, -65545, 65536, 0, -9, 65536, 0, 65527, 65536, 0, 131063, 65536, 0, 196599, 65536, 0, 262135, 65536, 0, 327671, 65536, 0, 393207, 65536, 0, -196616, 131072, 0, -131080, 131072, 0, -65544, 65536, 0, -8, 65536, 0, 65528, 65536, 0, 131064, 65536, 0, 196600, 131072, 0, 262136, 131072, 0, 327672, 131072, 0, 393208, 65536, 0, -196615, 131072, 0, -131079, 131072, 0, -65543, 131072, 0, -7, 65536, 0, 65529, 65536, 0, 131065, 65536, 0, 196601, 131072, 0, 262137, 131072, 0, 327673, 131072, 0, 393209, 131072, 0, -196614, 131072, 0, -131078, 131072, 0, -65542, 131072, 0, -6, 131072, 0, 65530, 131072, 0, 131066, 131072, 0, 196602, 131072, 0, 262138, 131072, 0, 327674, 131072, 0, 393210, 131072, 0, -196613, 131072, 0, -131077, 131072, 0, -65541, 131072, 0, -5, 131072, 0, 65531, 131072, 0, 131067, 131072, 0, 196603, 131072, 0, 262139, 131072, 0, 327675, 131072, 0, 393211, 131072, 0, -196612, 131072, 0, -131076, 131072, 0, -65540, 131072, 0, -4, 131072, 0, 65532, 131072, 0, 131068, 131072, 0, 196604, 131072, 0, 262140, 131072, 0, 327676, 131072, 0, 393212, 131072, 0, -196611, 131072, 0, -131075, 131072, 0, -65539, 131072, 0, -3, 131072, 0, 65533, 131072, 0, 131069, 131072, 0, 196605, 131072, 0, 262141, 131072, 0, 327677, 131072, 0, 393213, 131072, 0, -196610, 131072, 0, -131074, 131072, 0, -65538, 131072, 0, -2, 131072, 0, 65534, 131072, 0, 131070, 131072, 0, 196606, 131072, 0, 262142, 131072, 0, 327678, 131072, 0, 393214, 131072, 0, -196609, 131072, 0, -131073, 131072, 0, -65537, 131072, 0, -1, 131072, 0, 65535, 131072, 0, 131071, 131072, 0, 196607, 131072, 0, 262143, 131072, 0, 327679, 131072, 0, 393215, 131072, 0, -262144, 131072, 0, -196608, 131072, 0, -131072, 131072, 0, -65536, 131072, 0, 0, 131072, 0, 65536, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, -262143, 65536, 0, -196607, 65536, 0, -131071, 65536, 0, -65535, 131072, 0, 1, 131072, 0, 65537, 131072, 0, 131073, 65536, 0, 196609, 65536, 0, 262145, 131072, 0, 327681, 65536, 0, -262142, 131072, 0, -196606, 131072, 0, -131070, 131072, 0, -65534, 131072, 0, 2, 131072, 0, 65538, 131072, 0, 131074, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 327682, 65536, 0, -262141, 131072, 0, -196605, 131072, 0, -131069, 131072, 0, -65533, 131072, 0, 3, 131072, 0, 65539, 131072, 0, 131075, 131072, 0, 196611, 131072, 0, 262147, 131072, 0, 327683, 65536, 0, -262140, 131072, 0, -196604, 131072, 0, -131068, 131072, 0, -65532, 131072, 0, 4, 131072, 0, 65540, 131072, 0, 131076, 131072, 0, 196612, 131072, 0, 262148, 131072, 0, 327684, 65536, 0, -262139, 131072, 0, -196603, 131072, 0, -131067, 131072, 0, -65531, 131072, 0, 5, 131072, 0, 65541, 131072, 0, 131077, 131072, 0, 196613, 131072, 0, 262149, 131072, 0, 327685, 65536, 0, -262154, 65536, 0, -196618, 65536, 0, -131082, 65536, 0, -65546, 65536, 0, -10, 65536, 0, 65526, 65536, 0, 131062, 65536, 0, 196598, 65536, 0, 262134, 65536, 0, 327670, 65536, 0, 393206, 65536, 0, 458742, 65536, 0, -262153, 65536, 0, 458743, 65536, 0, -262152, 65536, 0, 458744, 65536, 0, -262151, 65536, 0, 458745, 65536, 0, -262150, 131072, 0, 458746, 131072, 0, -262149, 131072, 0, 458747, 131072, 0, -262148, 131072, 0, 458748, 131072, 0, -262147, 131072, 0, 458749, 131072, 0, -262146, 131072, 0, 458750, 131072, 0, -262145, 131072, 0, 458751, 131072, 0, -327680, 131072, 0, 393216, 131072, 0, -327679, 65536, 0, 393217, 65536, 0, -327678, 65536, 0, 393218, 65536, 0, -327677, 65536, 0, 393219, 65536, 0, -327676, 65536, 0, 393220, 65536, 0, -327675, 65536, 0, 393221, 65536, 0, -327674, 131072, 0, -262138, 131072, 0, -196602, 131072, 0, -131066, 131072, 0, -65530, 131072, 0, 6, 131072, 0, 65542, 131072, 0, 131078, 131072, 0, 196614, 131072, 0, 262150, 131072, 0, 327686, 65536, 0, 393222, 65536, 0, -327673, 131072, 0, -262137, 131072, 0, -196601, 131072, 0, -131065, 131072, 0, -65529, 131072, 0, 7, 131072, 0, 65543, 131072, 0, 131079, 131072, 0, 196615, 131072, 0, 262151, 131072, 0, 327687, 65536, 0, 393223, 65536, 0, -327672, 131072, 0, -262136, 131072, 0, -196600, 131072, 0, -131064, 131072, 0, -65528, 131072, 0, 8, 131072, 0, 65544, 131072, 0, 131080, 131072, 0, 196616, 131072, 0, 262152, 131072, 0, 327688, 131072, 0, 393224, 65536, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="PausedButton" parent="CanvasLayer/Control" instance=ExtResource("3_6rbql")]
layout_mode = 0
offset_left = 150.0
offset_top = -94.0
offset_right = 188.0
offset_bottom = -53.0

[node name="Reset" parent="CanvasLayer/Control" instance=ExtResource("4_4qplp")]
layout_mode = 0
offset_left = 150.0
offset_top = -65.0
offset_right = 188.0
offset_bottom = -24.0

[node name="Puzzles" type="Node2D" parent="."]

[node name="MeasuringZone" parent="Puzzles" instance=ExtResource("5_ypbsr")]
position = Vector2(8, -5)
max_mass = 400

[node name="Gate" parent="Puzzles" instance=ExtResource("6_0uq0e")]
position = Vector2(107, 28)

[node name="Honeydew" parent="Puzzles" instance=ExtResource("7_hyhtb")]
position = Vector2(80, -10)

[node name="Camera2D" type="Camera2D" parent="." groups=["CameraShake"]]
zoom = Vector2(3, 3)
script = ExtResource("8_4r3tr")
randomStrength = 5.0
shakeFade = 10.0

[node name="Tools" parent="." instance=ExtResource("9_h24bs")]
position = Vector2(52, 18)

[node name="Marker2D2" type="Marker2D" parent="Tools"]
position = Vector2(65, -11)

[node name="Ant" parent="." instance=ExtResource("10_or68a")]
position = Vector2(116, -66)

[node name="PauseMenu" parent="." instance=ExtResource("11_hbkdr")]

[node name="ScalableObject" type="Node2D" parent="."]

[node name="Rock" parent="ScalableObject" instance=ExtResource("12_g6fq1")]
position = Vector2(107, 28)
init_scale = 2

[node name="Rock2" parent="ScalableObject" instance=ExtResource("12_g6fq1")]
position = Vector2(81, -10)
init_scale = 2

[node name="Rock3" parent="ScalableObject" instance=ExtResource("12_g6fq1")]
position = Vector2(-21, -46)
init_scale = 2

[node name="Rock4" parent="ScalableObject" instance=ExtResource("12_g6fq1")]
position = Vector2(-36, 43)

[connection signal="button_down" from="CanvasLayer/Control/PausedButton" to="." method="_on_paused_button_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/Reset" to="." method="_on_reset_button_down"]
[connection signal="Enoughed" from="Puzzles/MeasuringZone" to="." method="_on_measuring_zone_enoughed"]
